graphical basic configs